# agent-contracts

./: .gitignore  .pre-commit-config.yaml  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  claude.md  main.py  pyproject.toml  theories.md
benchmarks/: README.md  __init__.py  benchmark_phase1.py  benchmark_phase1_qa.py
benchmarks/google_adk/: __init__.py  demo_integration.py
benchmarks/governance/: README.md  VARIANCE_ANALYSIS.md  __init__.py  budget_violation_test.py  cost_governance_test.py  variance_reduction_test.py
benchmarks/langchain/: README.md  demo_integration.py
benchmarks/langgraph/: README.md  demo_integration.py
benchmarks/quality_validation/: VALIDATION_FINDINGS.md  bimodal_hypotheses.md  sample_selector.py  study_design.md  test_harness.py  test_reasoning_effort.py
benchmarks/research_agent/: FUNDAMENTAL_ISSUES.md  README.md  __init__.py  agent.py  benchmark.py  contracted_agent.py  deep_analysis.py  evaluator.py  questions.py  uncontracted_agent.py
benchmarks/research_agent/results/: benchmark_results_20251102_093528.json  benchmark_results_20251102_095349.json
benchmarks/strategic/: pareto_visualization.py  strategic_optimization_test.py
docs/: README.md  quality_measurement_research.md  testing-strategy.md  whitepaper.md
examples/: phase2b_production_features.py
src/agent_contracts/: __init__.py  py.typed  templates.py
src/agent_contracts/core/: __init__.py  contract.py  enforcement.py  monitor.py  planning.py  prompts.py  tokens.py  wrapper.py
src/agent_contracts/integrations/: __init__.py  google_adk.py  langchain.py  langgraph.py  litellm_wrapper.py
tests/: __init__.py  test_templates.py
tests/core/: test_contract.py  test_enforcement.py  test_fine_grained_tokens.py  test_monitor.py  test_planning.py  test_prompts.py  test_temporal_monitor.py  test_tokens.py  test_wrapper.py
tests/integrations/: test_google_adk.py  test_langchain.py  test_langgraph.py  test_litellm_wrapper.py
